--- a/impressões.html
+++ b/impressões.html
@@ -157,7 +157,8 @@
                                 </div>
                             </div>
                             <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">impressões</h5>
+                                <h5 class="fw-bold mb-0">Nome Mão de Hansá</h5>
+                                <p>30x30cm</p>
                                 <small>Valor 29,00€</small>
                             </div>
                         </div>
@@ -174,6 +175,7 @@
                             </div>
                             <div class="text-center p-4 mt-3">
                                 <h5 class="fw-bold mb-0">impressões</h5>
+                                <p>30x30cm</p>
                                 <small>Valor 29,00€</small>
                             </div>
                         </div>
@@ -190,6 +192,7 @@
                             </div>
                             <div class="text-center p-4 mt-3">
                                 <h5 class="fw-bold mb-0">impressões</h5>
+                                <p>30x30cm</p>
                                 <small>Valor 23,00€</small>
                             </div>
                         </div>
