--- a/impressões.html
+++ b/impressões.html
@@ -174,8 +174,8 @@
                                 </div>
                             </div>
                             <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">impressões</h5>
-                                <p>30x30cm</p>
+                                <h5 class="fw-bold mb-0">Flowing </h5>
+                                <p>30x30cm (Sem moldura)</p>
                                 <small>Valor 23,00€</small>
                             </div>
                         </div>
