--- a/impressões.html
+++ b/impressões.html
@@ -149,7 +149,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/Impressões_1.jpg" alt="">
+                                <img class="img-fluid" src="img/Impressões_1.jpg" alt="#">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">Nome Mão de Hansá</h5>
+                                <h6 class="fw-bold mb-0">Nome Mão de Hansá</h6>
                                 <p>30x30cm</p>
                                 <small>Valor 29,00€</small>
                             </div>
@@ -166,7 +166,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/Impressões_2.jpg" alt="">
+                                <img class="img-fluid" src="img/Impressões_2.jpg" alt="#">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
@@ -174,7 +174,7 @@
                                 </div>
                             </div>
                             <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">Flowing </h5>
+                                <h6 class="fw-bold mb-0">Flowing </h6>
                                 <p>30x30cm (Sem moldura)</p>
                                 <small>Valor 23,00€</small>
                             </div>
