--- a/impressões.html
+++ b/impressões.html
@@ -146,7 +146,7 @@
                                 </div>
                             </div>
                             <div class="text-center p-4 mt-3">
-                                <h6 class="fw-bold mb-0">Nome Mão de Hansá</h6>
+                                <h6 class="fw-bold mb-0">Mão de Hansá</h6>
                                 <p>30x30cm</p>
                                 <small>Valor 29,00€</small>
                             </div>
