--- a/impressões.html
+++ b/impressões.html
@@ -147,7 +147,7 @@
                             </div>
                             <div class="text-center p-4 mt-3">
                                 <h6 class="fw-bold mb-0">Mão de Hansá</h6>
-                                <p>30x30cm</p>
+                                <p>30x30cm (Sem moldura)</p>
                                 <small>Valor 29,00€</small>
                             </div>
                         </div>
