--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="col-md-6 p-5 mt-lg-5">
                     <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
                         <div class="">
-                            <img class="img-fluid w-100" src="img/msn1.jpg">
+                            <img class="img-fluid w-100" src="img/home_1.jpg">
                         </div>
                     </div>
 
