--- a/impressões.html
+++ b/impressões.html
@@ -148,6 +148,7 @@
                             <div class="text-center p-4 mt-3">
                                 <h6 class="fw-bold mb-0">Mão de Hansá</h6>
                                 <p>30x30cm (Sem moldura)</p>
+                                <p> C/ Certificado de Autenticidade</p>
                                 <small>Valor 29,00€</small>
                             </div>
                         </div>
@@ -165,6 +166,7 @@
                             <div class="text-center p-4 mt-3">
                                 <h6 class="fw-bold mb-0">Mão de Hansá</h6>
                                 <p>20x20cm (Sem moldura)</p>
+                                <p> C/ Certificado de Autenticidade</p>
                                 <small>Valor 18,50€</small>
                             </div>
                         </div>
@@ -182,6 +184,7 @@
                             <div class="text-center p-4 mt-3">
                                 <h6 class="fw-bold mb-0">Flowing</h6>
                                 <p>30x30cm (Sem moldura)</p>
+                                <p> C/ Certificado de Autenticidade</p>
                                 <small>Valor 23,00€</small>
                             </div>
                         </div>
@@ -199,6 +202,7 @@
                             <div class="text-center p-4 mt-3">
                                 <h6 class="fw-bold mb-0">Flowing</h6>
                                 <p>20x20cm (Sem moldura)</p>
+                                <p> C/ Certificado de Autenticidade</p>
                                 <small>Valor 12,80€</small>
                             </div>
                         </div>
