--- a/aguarelas.html
+++ b/aguarelas.html
@@ -96,7 +96,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
+                                <a href="aboutmiart.html" class="dropdown-item">About my Art</a>>
                                 <a href="aboutme.html" class="dropdown-item">About me</a>
                             </div>
                         </div>
@@ -217,10 +217,10 @@
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-light btn-social"
-                                href="https://www.facebook.com/santiagocolibriolibri"><i class="fab fa-facebook"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="#"ai><i
-                                    class="fa fa-envelope"></i></a>
+                            <a class="btn btn-outline-light btn-social"
+                                href="https://www.facebook.com/santiagocolibriolibri"><i
+                                    class="fab fa-facebook"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="#" ai><i class="fa fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
