--- a/cursos.html
+++ b/cursos.html
@@ -96,7 +96,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
+                                <a href="aboutmiart.html" class="dropdown-item">About my Art</a>
                                 <a href="aboutme.html" class="dropdown-item">About me</a>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
         </div>
         <!-- Navbar End -->
 
-
+        
         <!-- Watshap Start-->
         <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
             onclick="window.location.href='https://wa.me/351932857248?text=.!%20.%20.%20.%20.%20.'">
@@ -133,81 +133,84 @@
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                            <img class="img-fluid w-100" src="img/cursos_1.jpg">
-                        </div>
+                        <img class="img-fluid w-100" src="img/cursos_1.jpg">
                     </div>
-                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                        <h1 class="mb-4">Curso:</h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet
-                            diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna
-                            dolore erat amet</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
+                </div>
+                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                    <h1 class="mb-4">Curso:</h1>
+                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet
+                        diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna
+                        dolore erat amet</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                    <video width="320" height="240" controls>
+                        <source src="img/video_Art_Suol_Colibri.mp4" type="video/mp4">
+                        <source src="movie.ogg" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                    <h1 class="mb-4">Curso:</h1>
+                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet
+                        diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna
+                        dolore erat amet</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Cursos End -->
+
+    <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.1s">
+        <a class="btn btn-primary py-3 px-5" href="https://form.jotform.com/251193714240046">Clique aqui para mais informações</a>
+    </div>
+
+    <!-- Footer Start -->
+    <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container py-2">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-white mb-4">Get in touch</h5>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
+                    <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/atelier_colibri"><i
+                                class="fab fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-social"
+                            href="https://www.facebook.com/santiagocolibriolibri"><i class="fab fa-facebook"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="#" ai><i class="fa fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="container-xxl py-5">
-            <div class="container">
-                <div class="row g-5 align-items-center">
-                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                        <video width="320" height="240" controls>
-                            <source src="img/video_Art_Suol_Colibri.mp4" type="video/mp4">
-                            <source src="movie.ogg" type="video/ogg">
-                            Your browser does not support the video tag.
-                        </video>
-                    </div>
-                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                        <h1 class="mb-4">Curso:</h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet
-                            diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna
-                            dolore erat amet</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
+        <div class="container">
+            <div class="copyright">
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        &copy; <a class="border-bottom" href="#">Art Soul Colibri</a>, All rights reserved.
+                        Designed by <a class="border-bottom" href="index.html">Plus Works Services</a>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Cursos End -->
+    </div>
+    <!-- Footer End -->
 
-        <!-- Footer Start -->
-        <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
-            <div class="container py-2">
-                <div class="row g-5">
-                    <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Get in touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
-                        <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
-                        <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social"
-                                href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social"
-                                href="https://www.facebook.com/santiagocolibriolibri"><i
-                                    class="fab fa-facebook"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="#" ai><i class="fa fa-envelope"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Art Soul Colibri</a>, All rights reserved.
-                            Designed by <a class="border-bottom" href="index.html">Plus Works Services</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Footer End -->
-
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
 
     <!-- JavaScript Libraries -->
