--- a/impressões.html
+++ b/impressões.html
@@ -96,7 +96,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
+                                <a href="aboutmiart.html" class="dropdown-item">About my Art</a>
                                 <a href="aboutme.html" class="dropdown-item">About me</a>
                             </div>
                         </div>
