--- a/aboutme.html
+++ b/aboutme.html
@@ -127,41 +127,29 @@
             <div class="container">
                 <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
                     <h1 class="text-center mb-3">Sobre mim e a Art Soul Colibri</h1>
-                    <p> Ana Santiago tenho 56 anos , Mãe , casada , e mãe bichiológica (tutora) de 2 cães e 2 gatos ,
-                        amo jardins flores e mares , ler , viajar e conhecer locais que me chamam , eterna estudiosa por
-                        tudo aquilo que sinto que me acrescenta e evolui ,sou formada academicamente pela ESAP ( Escola
-                        Superior Artística do Porto ) , com DESE em Publicidade e (MTC) Acupuntura Fitoterapia e
-                        Medicina Tradicional Chinesa pela UMC, CAP (actual CCP) , Reiki 3 desde 2004 e tantas outras
-                        Formações Holísticas assim como diversas formações sobre o estudo do Comportamento Humano.
+                    <p> Ana Santiago,  56 anos , Mãe , casada , e mãe bichiológica (tutora) de 2 cães e 2 gatos ,
+                        amo jardins flores e mares , ler , música , viajar e conhecer locais que me chamam , eterna
+                        estudiosa por tudo aquilo que sinto que me acrescenta e evolui , formada academicamente
+                        em Fotografia pela ESAP ( Escola Superior Artística do Porto ) , com DESE em Publicidade
+                        e (MTC) Acupuntura Fitoterapia e Medicina Tradicional Chinesa pela UMC, CAP (atual
+                        CCP) , Reiki 3 desde 2007 e tantas outras Formações Holísticas assim como diversas
+                        formações sobre o estudos Comportamentais.
                     </p>
-                    <p>Sou a Criadora do Art Soul Colibri, em 2007 fundei o Atelier Colibri e desde 2017 comecei a
-                        sentir uma forte vontade de mudança e evolução pois para mim muitas coisas estavam a deixar de
-                        fazer sentido … e Hoje em Abril de 2025, trago á luz do Sol o Art Soul Colibri.
+                    <p>SSou a Criadora do Art Soul Colibri, em 2007 fundei o Atelier Colibri e desde 2017 comecei a
+                        sentir uma forte vontade de mudança e evolução, deixar de fazer consultas, deixar a
+                        Terapeuta para trás e entregar esse espaço em mim a Artista … e hoje em Abril de 2025,
+                        trago á luz do Sol o Art Soul Colibri. O ‘Art Soul Colibri’ reflete uma conexão profunda com a
+                        arte, o autoconhecimento e a espiritualidade com essência e valores como transparência,
+                        Empatia e Responsabilidade, levando desta forma até ti a minha Arte, e Autoconhecimento.
                     </p>
-                    <p>O ‘Art Soul Colibri’ reflete uma conexão profunda com a arte, o autoconhecimento e a
-                        espiritualidade com essência e valores como Transparência, Empatia e Responsabilidade, levando
-                        desta forma até ti a minha Arte, e Autoconhecimento.
+                    <p>Como seres espirituais a viver e experienciar uma vida terrena, acredito na conexão destas
+                        duas forças (Céu e Terra) em nós, assim como na evolução e crescimento dia a dia, e ao
+                        longo desta maravilhosa caminhada.
                     </p>
-                    <p>Como seres espirituais a viver e experienciar uma vida terrena , acredito na conexão destas duas
-                        forças (Céu e Terra ) em nós, assim como na evolução e crescimento dia a dia , e ao longo desta
-                        maravilhosa caminhada.
-                    </p>
-                    <p>Se sempre é fácil? Pois , não acho , nem sempre a passadeira é feita de rosas lindas e frescas ,
-                        mas penso ser esse precisamente o Grande Professor o Desafio dos Desafios , as lições de
-                        aprendizagem que nos levam passo a passo , a um aprendizado e a níveis Superiores de Consciência
-                        e Evolução.
-                    </p>
-                    <p>Acredito que o Autoconhecimento é um Caminho que nos Reconecta com a nossa verdadeira e mais
-                        pura essência.
-                    </p>
-                    <p>
-                        Benvinda(o) a estas pinceladas de Cor e Expressão ,
-                    </p>
-                    <p>
-                        Benvinda(o) ao Art Soul Colibri
-                    </p>
-                    <p>
-                        Gratidão,
+                    <p>Se sempre é fácil? Pois, não acho, nem sempre a passadeira é feita de maravilhosas rosas
+                        frescas, mas penso ser esse precisamente o Grande Professor o Desafio os Desafios, as
+                        lições de aprendizagem que nos levam passo a passo, a um aprendizado e a níveis
+                        Superiores de Consciência
                     </p>
                     <p>
                         Ana
