--- a/aboutme.html
+++ b/aboutme.html
@@ -135,7 +135,7 @@
                         CCP) , Reiki 3 desde 2007 e tantas outras Formações Holísticas assim como diversas
                         formações sobre o estudos Comportamentais.
                     </p>
-                    <p>SSou a Criadora do Art Soul Colibri, em 2007 fundei o Atelier Colibri e desde 2017 comecei a
+                    <p>Sou a Criadora do Art Soul Colibri, em 2007 fundei o Atelier Colibri e desde 2017 comecei a
                         sentir uma forte vontade de mudança e evolução, deixar de fazer consultas, deixar a
                         Terapeuta para trás e entregar esse espaço em mim a Artista … e hoje em Abril de 2025,
                         trago á luz do Sol o Art Soul Colibri. O ‘Art Soul Colibri’ reflete uma conexão profunda com a
