--- a/aboutmiart.html
+++ b/aboutmiart.html
@@ -359,6 +359,17 @@
         </div>
         <!-- Arte intuitiva End -->
 
+        <div class="container-xxl py-5">
+            <div class="container">
+                <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <div class="text-center">
+                        <img src="img/img_about.jpg" class="img-fluid" alt="Icon"
+                            style="width: 200pxf; height: 200px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-2">
