--- a/aboutmiart.html
+++ b/aboutmiart.html
@@ -363,7 +363,7 @@
             <div class="container">
                 <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
                     <div class="text-center">
-                        <img src="img/img_about.jpg" class="img-fluid" alt="Icon"
+                        <img src="img/img_aboutmy.jpg" class="img-fluid" alt="Icon"
                             style="width: 200pxf; height: 200px;">
                     </div>
                 </div>
