--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 p-5 mt-lg-5">
                     <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="">
+                        <div>
                             <img class="img-fluid w-100" src="img/home_1.jpg">
                         </div>
                     </div>
