--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 
+    <!-- Meta Etiqueta Google Searc Console -->
+    <meta name="google-site-verification" content="IB728fyCAdsmJ6IPoHnWa6sljqraeJBrhrX5qfL89VU" />
+    <!-- Meta Etiqueta Google Searc Console -->
+
 </head>
 
 <body>
